[gd_scene load_steps=3 format=3 uid="uid://jiw5bbf3ycjv"]

[ext_resource type="Script" uid="uid://cr25rj8r4efag" path="res://script/card.gd" id="1_gf8u7"]
[ext_resource type="Texture2D" uid="uid://doglf87u7wsa" path="res://assets/images/cards/card_back.png" id="2_ntw5e"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(80, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 120.0
script = ExtResource("1_gf8u7")

[node name="CardFront" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="CardBack" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ntw5e")
expand_mode = 1

[node name="FlipAnimation" type="AnimationPlayer" parent="."]
